pushing recent changes

--- a/views/about.html
+++ b/views/about.html
@@ -32,8 +32,9 @@
             <p>mission, origin and teams</p>
           </div>
        </section>
+
        <section class="panel bg-secondary">
-           <section class="lg:flex mb-4 ">
+           <section class="md:flex lg:flex mb-4 ">
               <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
                   <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
                       A Note From VINCI
