--- a/views/index.html
+++ b/views/index.html
@@ -35,71 +35,58 @@
           </header>
           <hr class="-mt-4">
 
-
-          <!-- <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-6">
-            <a href="./index.html">
-              <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
-            </a>
-            <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
-              <svg class="w-12" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
-            </div>
-            <ul class="flex justify-between sm:hidden md:flex md:text-sm lg:text-xl lg:mx-32">
-              <a href="./about.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-              </a>
-              <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
-              </a>
-              <a href="./partners.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-              </a>
-              <a href="./blog.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-              </a>
-              <a href="./careers.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-              </a>
-              <a href="./contact.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-              </a>
-            </ul>
-          </nav>
-
-
       <!--==================
        HERO SECTION
       ==================-->
 
-          <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
+          <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
               <source src="../public/assets/video/background2.mp4" type="video/mp4">
           </video>
+
           <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
-            <h1 class="font-serif sm:text-2xl md:text-4xl xlg:text-5xl"> PREPARE FOR THE REAL WORLD
-              <hr class="mt-4">
+            <h1 class="font-serif sm:text-2xl md:text-2xl xlg:text-2xl"> PREPARE FOR THE REAL WORLD
+              <hr class="mt-4 w-1/2 mx-auto">
             </h1>
             <br>
-             <p class="font-sans font-black -mb-20 -mt-6 sm:text-4xl md:text-6xl"> WITH A WORLD OF YOUR OWN
-              <hr class="mt-20">
+             <p class="font-sans font-black -mb-20 -mt-6 sm:text-2xl md:text-5xl"> WITH A WORLD OF YOUR OWN
+              <hr class="mt-20 w-1/2 mx-auto">
              </p>
-           <h3 class="pt-12 sm:text-2xl sm:my-8  lg:text-3xl">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="sm:my-8 sm:text-3xl md:text-2xl lg:mb-16 lg:text-xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
-           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl" href="./products.html">Learn about our services</a>
+           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l  lg:text-base" href="./products.html">Learn about our services</a>
     ​
-    ​       <p class="down-arrow sm:text-6xl my-32">⌄</p>
+    ​       <p class="down-arrow sm:text-4xl my-10">⌄</p>
           </section>
-
-          <!-- <img class="absolute bottom-0 left-0 z-10  sm:w-20" src="../public/assets/figma-imgs/line-guide.png" alt="styled guideline" class="guideline"> -->
         </section>
-      </section>
+      </section> -->
 
-      <section class="panel">
-        <!--==================
-         INTRO SECTION
-        ==================-->
-          <section class="w-full h-screen sm:mx-4 lg:mx-20 xl:mx-64 md:my-32 lg:my-64 sm:block md:flex">
-            <section class="introTextBlock lg:w-9/12">
-              <h1 class="text-4xl font-sans font-black border-b p-4 sm:text-center sm:w-11/12 lg:w-full lg:text-left">Codex: A New Way to Train in VR</h1>
+      <!--==================
+       INTRO SECTION
+      ==================-->
+      <section class="panel bg-secondary">
+          <section class="md:flex lg:flex mb-4 ">
+             <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
+                 <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
+                     A New Way to Train in VR
+                 </h2>
+                 <hr class="mt-4">
+                 <p class="text-primary text-left mt-6 tracking-widest leading-8">
+                    Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
+                </p>
+                <a href="#">
+                  <p class="text-center">LEARN MORE ABOUT CODEX</p>
+                </a>
+             </div>
+             <div class="w-2/5 p-12">
+                 <img class="object-cover h-full" src="../public/assets/figma-imgs/vitruve.jpg" alt="">
+             </div>
+           </section>
+      </section>
+      <!-- <section class="panel">
+          <section class="w-full h-screen sm:mx-4 lg:mx-20 xl:mx-64 md: lg:my-64 sm:block md:flex">
+            <section class="introTextBlock lg:w-3/5">
+              <h1 class="text-3xl font-sans font-black border-b p-4 sm:text-center sm:w-11/12 lg:w-full lg:text-left">Codex: A New Way to Train in VR</h1>
 
               <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12 sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
               </p>
@@ -113,7 +100,7 @@
         			<img src="../public/assets/figma-imgs/vr-goggles.png" alt="vr goggles" class="vr-goggles">
             </aside>
           </section>
-      </section>
+      </section> -->
 
       <section class="panel">
         <!--==================
@@ -121,36 +108,6 @@
         ==================-->
 
         <section class="whyBlock h-screen w-full mb-64">
-          <!-- <section class="card-container w-full sm:block sm:w-full md:flex md:justify-center">
-            <section class="personalize card bg-secondary border rounded text-center overflow-hidden w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
-              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Personalize Training</h1>
-
-            </section>
-            <section class="built card text-center shadow-md h-auto py-16 p-6 rounded overflow-hidden mx-8 w-4/12 sm:w-2/5 sm:my-12" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);">
-              <img class="m-auto p-8" src="../public/assets/figma-imgs/jet.png" alt="">
-              <h1 class="font-sans font-bold text-4xl">Built for VR</h1>
-              <p class="text-xl">VR is cheaper, safer, yet as realistic as real equipment.</p>
-              <a href="#">See why Codex is better  > </a>
-            </section>
-            <section class="scalable card items-center bg-secondary border rounded overflow-hidden text-center w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
-              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Scalable & Relevant</h1>
-              <a href="./partners.html">click here</a>
-            </section>
-          </section>
-
-          <nav class="carousel text-center items-center">
-            <input class="carousel-item-1 mx-10 bg-pink-900" type="radio" name="carousel-dots">
-
-            <input class="carousel-item-2 mx-10" type="radio" name="carousel-dots" checked>
-
-            <input class="carousel-item-3 mx-10" type="radio" name="carousel-dots">
-          </nav> -->
-
-
-
-
-
-
 
           <!-- TEST CAROUSEL -->
 
