added details so we can connect backend

--- a/views/about.html
+++ b/views/about.html
@@ -8,11 +8,11 @@
   </head>
   <body class="font-serif">
     <section id = "container" class="main-wrapper overflow-x-hidden">
-     <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/assets/figma-imgs/about-cover.png')">
+     <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="./index.html" class="flex items-center mb-4 md:mb-0">
-                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -52,7 +52,7 @@
                    </p>
               </div>
               <div class="w-2/5 p-12">
-                  <img class="object-cover h-full" src="../public/assets/figma-imgs/vitruve.jpg" alt="">
+                  <img class="object-cover h-full" src="../public/img/vitruve.jpg" alt="">
               </div>
             </section>
       </section>
@@ -71,7 +71,7 @@
           </p>
         </div>
         <div class="w-2/5 p-12 ">
-          <img class="object-cover lg:h-full" src="../public/assets/figma-imgs/leo.png" alt="picture of davinci">
+          <img class="object-cover lg:h-full" src="../public/img/leo.png" alt="picture of davinci">
         </div>
       </section>
 
@@ -86,7 +86,7 @@
                 <div class="flex flex-wrap -m-2">
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/eagle.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.jpg">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
@@ -100,7 +100,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/clancy.png">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/clancy.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
@@ -114,7 +114,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/liam.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.jpg">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -123,7 +123,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/matt.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.jpg">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">John Doe</h2>
                         <p class="text-third">blank</p>
@@ -132,7 +132,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/img1.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.jpg">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -141,7 +141,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/tim.jpeg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.jpeg">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -163,7 +163,7 @@
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-                 <img class="-mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
                </div>
                <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
                  <div class="lg:w-1/4 md:w-1/2 w-full px-4">
@@ -222,7 +222,7 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../src/js/about.js"></script>
+    <script src ="../public/js/about.js"></script>
 
   </body>
 
