--- a/views/partners.html
+++ b/views/partners.html
@@ -8,11 +8,11 @@
   </head>
   <body class="font-serif">
     <section id = "container" class="background">
-      <section id="cover" class="bg-bottom bg-cover bg-opacity-75 text-primary panel background cover overflow-hidden" style="background-image: url('../public/assets/figma-imgs/partners-hero-img.png')">
+      <section id="cover" class="bg-bottom bg-cover bg-opacity-75 text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/partners-hero-img.png')">
         <header class="text-gray-700 body-font ">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
               <a href="./index.html" class="flex items-center mb-4 md:mb-0">
-                <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                 <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -145,7 +145,7 @@
             </div>
             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-                <img class="-mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
               </div>
               <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
                 <div class="lg:w-1/4 md:w-1/2 w-full px-4">
@@ -205,6 +205,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../src/js/partners.js"></script>r
+    <script src ="../public/js/partners.js"></script>r
   </body>
 </html>
