--- a/views/contact.html
+++ b/views/contact.html
@@ -8,11 +8,11 @@
   </head>
   <body class="font-serif">
     <section id = "container">
-        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/assets/figma-imgs/contact-hero-img.png')">
+        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="./index.html" class="flex items-center mb-4 md:mb-0">
-                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -57,6 +57,6 @@
    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../src/js/contact.js"></script>
+    <script src ="../public/js/contact.js"></script>
   </body>
 </html>
