adding blank copy

--- a/public/css/careers.css
+++ b/public/css/careers.css
@@ -8,7 +8,7 @@
 }
 
 .hero-img {
-  background-image: url("../img/careers-hero-img.png");
+  background-image: url("../assets/figma-imgs/careers-hero-img.png");
   background-size: cover;
   background-position:center;
   background-repeat: no-repeat;
