--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
                 <a href="./index.html" class="flex items-center mb-4 md:mb-0  z-10">
-                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -39,9 +39,9 @@
        HERO SECTION
       ==================-->
 
-          <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
+          <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
-              <source src="../public/video/background2.mp4" type="video/mp4">
+              <source src="../public/assets/video/background2.mp4" type="video/mp4">
           </video>
 
           <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
@@ -59,7 +59,7 @@
     ​       <p class="down-arrow sm:text-4xl my-10">⌄</p>
           </section>
         </section>
-      </section>
+      </section> -->
 
       <!--==================
        INTRO SECTION
@@ -79,10 +79,28 @@
                 </a>
              </div>
              <div class="w-2/5 p-12">
-                 <img class="object-cover h-full" src="../public/img/vitruve.jpg" alt="">
+                 <img class="object-cover h-full" src="../public/assets/figma-imgs/vitruve.jpg" alt="">
              </div>
            </section>
       </section>
+      <!-- <section class="panel">
+          <section class="w-full h-screen sm:mx-4 lg:mx-20 xl:mx-64 md: lg:my-64 sm:block md:flex">
+            <section class="introTextBlock lg:w-3/5">
+              <h1 class="text-3xl font-sans font-black border-b p-4 sm:text-center sm:w-11/12 lg:w-full lg:text-left">Codex: A New Way to Train in VR</h1>
+
+              <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12 sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
+              </p>
+
+              <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l sm:ml-2 lg:text-xl lg:-ml-0 sm:block" style="width: 67%;" href="./products.html">
+                <p class="text-center">LEARN MORE ABOUT CODEX</p>
+              </a>
+            </section>
+
+            <aside class="vr-img w-2/6 sm:w-4/6 sm:mx-8 sm:my-8 md:float-left md:mr-20 lg:-mt-8">
+        			<img src="../public/assets/figma-imgs/vr-goggles.png" alt="vr goggles" class="vr-goggles">
+            </aside>
+          </section>
+      </section> -->
 
       <section class="panel">
         <!--==================
@@ -99,7 +117,7 @@
               <div class="md:flex flex-wrap -m-4 lg:mt-64">
                 <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Personalize Training</h1>
                       <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
@@ -109,7 +127,7 @@
                 <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
                       <!-- <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);"> -->
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Built for VR</h1>
                       <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
@@ -119,7 +137,7 @@
                 </div>
                 <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Scalable & Relavent</h1>
                       <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
@@ -131,6 +149,40 @@
           </section>
 
 
+
+
+          <!-- <div id='car-container'>
+            <input type='radio' name="image" id='inp1' checked>
+            <input type='radio' name="image" id='inp2' >
+            <input type='radio' name="image" id='inp3'>
+
+            <div class='images' id='one'>
+              <img src='https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=847&q=8'>
+
+              <label for='inp3' class='prev'></label>
+              <label for='inp2' class='next'></label>
+            </div>
+
+            <div class='images' id='two'>
+              <img src='https://images.unsplash.com/photo-1530825894095-9c184b068fcb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80'>
+
+              <label for='inp1' class='prev'></label>
+              <label for='inp3' class='next'></label>
+            </div>
+
+            <div class='images' id='three'>
+              <img src='https://images.unsplash.com/photo-1554474054-1258273559a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'>
+
+              <label for='inp2' class='prev'></label>
+              <label for='inp1' class='next'></label>
+            </div>
+
+            <div id='car-nav'>
+              <label class='dots' id='dot1' for='inp1'></label>
+              <label class='dots' id='dot2' for='inp2'></label>
+              <label class='dots' id='dot3' for='inp3'></label>
+            </div>
+          </div> -->
         </section>
       </section>
 
@@ -140,7 +192,29 @@
         ==================-->
 
         <section class="partnersBlock h-screen w-full mb-64">
+          <!-- <section class="card-container w-full sm:block sm:w-full md:flex md:justify-center">
+            <section class="wind card bg-secondary border rounded text-center overflow-hidden w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
+              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Wind Turbines</h1>
+              <a class="text-lg" href="#">click here</a>
+            </section>
+            <section class="aircraft card text-center shadow-md h-auto py-16 p-6 rounded overflow-hidden mx-8 w-4/12 sm:w-2/5 sm:my-12" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);">
+              <img class="m-auto p-8" src="../public/assets/figma-imgs/jet.png" alt="">
+              <h1 class="font-sans font-bold text-4xl">Air Craft Maintenance</h1>
+              <a href="#">Explore how our partners are using this  >  </a>
+            </section>
+            <section class="soldier card items-center bg-secondary border rounded overflow-hidden text-center w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
+              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Soldier Training</h1>
+              <a href="#">click here</a>
+            </section>
+          </section>
 
+          <nav class="carousel text-center items-center">
+            <input class="carousel-item-1 mx-10 bg-pink-900" type="radio" name="carousel-dots">
+
+            <input class="carousel-item-2 mx-10" type="radio" name="carousel-dots" checked>
+
+            <input class="carousel-item-3 mx-10" type="radio" name="carousel-dots">
+          </nav> -->
 
 
 
@@ -149,7 +223,7 @@
               <div class="md:flex flex-wrap -m-4 lg:mt-64">
                 <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Wind Turbines</h1>
                       <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
@@ -159,7 +233,7 @@
                 <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
                   <!-- <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);"> -->
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Air Craft Maintenance</h1>
                       <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
@@ -169,7 +243,7 @@
                 </div>
                 <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Soldier Training</h1>
                       <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
@@ -235,10 +309,10 @@
             </footer>
             <section class="footer-logos float-right -my-48 p-12">
               <div class="small-logos flex justify-end">
-                <img class="mx-12" src="../public/img/twitter.png" alt="">
-                <img src="../public/img/linkedin.png" alt="">
+                <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
+                <img src="../public/assets/figma-imgs/linkedin.png" alt="">
               </div>
-              <img src="../public/img/vinci-logo.png" alt="">
+              <img src="../public/assets/figma-imgs/vinci-logo.png" alt="">
             </section>
         </section>
       </section>
@@ -246,11 +320,44 @@
       <!-- end of main section container -->
     </section>
 
+    <!-- SCRIPTS -->
 
+    <script type="text/javascript">
+      let card = document.querySelector("#card");
 
+      // console.log(card);
+      //
+      // for(let i=0; i<card.length; i++) {
+      //   if(card[i].active = true) {
+      //     alert("yes");
+      //   }else{
+      //     alert("no bueno");
+      //   }
+      // }
+
+      card.addEventListener("click", countCheck);
+
+      function countCheck() {
+        alert("dog");
+        let count = 0;
+
+        for(let i=0; i<card.length; i++) {
+          count++
+          console.log(count);
+
+          if(count % 2 != 0) {
+            card.style.backgroundColor = "#6C6C6C";
+            card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
+          }else if(count % 2 == 0) {
+            card.style.backgroundColor = "#6C6C6C";
+            card.style.filter = "none";
+          }
+        }
+      }
+    </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../public/js/about.js"></script>
+    <script src ="../src/js/about.js"></script>
   </body>
 </html>
