--- a/views/products.html
+++ b/views/products.html
@@ -25,7 +25,7 @@
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="./index.html" class="flex items-center mb-4 md:mb-0">
-                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -90,7 +90,7 @@
               </li>
             </ul>
           </section>
-          <img src="../public/img/smartmockups_1.png" alt="codex authoring">
+          <img src="../public/assets/figma-imgs/smartmockups_1.png" alt="codex authoring">
         </section>
       </section>
       <section class="panel bg-secondary">
@@ -110,7 +110,7 @@
               </li>
             </ul>
           </section>
-          <img src="../public/img/smartmockups_2.png" alt="codex authoring">
+          <img src="../public/assets/figma-imgs/smartmockups_2.png" alt="codex authoring">
         </section>
       </section>
       <section class="panel bg-secondary">
@@ -130,7 +130,7 @@
               </li>
             </ul>
           </section>
-          <img src="../public/img/smartmockups_3.png" alt="codex authoring">
+          <img src="../public/assets/figma-imgs/smartmockups_3.png" alt="codex authoring">
         </section>
       </section>
       <section class="panel bg-secondary">
@@ -233,6 +233,6 @@
     =================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../public/js/index.js"></script>
+    <script src ="../src/js/about.js"></script>
   </body>
 </html>
