--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,5 +1,5 @@
 .hero-section {
-  background-image: url("../img/solutions-hero-img.png");
+  background-image: url("../assets/figma-imgs/solutions-hero-img.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
