--- a/views/careers.html
+++ b/views/careers.html
@@ -20,7 +20,7 @@
         <header class="text-gray-700 body-font ">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
               <a href="./index.html" class="flex items-center mb-4 md:mb-0">
-                <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                 <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
@@ -144,10 +144,10 @@
                 </footer>
                 <section class="footer-logos w-1/3 mx-32 absolute bottom-0 mb-20 right-0">
                   <div class="small-logos flex justify-end">
-                    <img class="mx-12" src="../public/img/twitter.png" alt="">
-                    <img src="../public/img/linkedin.png" alt="">
+                    <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
+                    <img src="../public/assets/figma-imgs/linkedin.png" alt="">
                   </div>
-                  <img src="../public/img/vinci-logo.png" alt="">
+                  <img src="../public/assets/figma-imgs/vinci-logo.png" alt="">
                 </section>
             </section>
           </section>
@@ -162,6 +162,6 @@
 =================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-        <script src ="../public/js/index.js"></script>
+        <script src ="../src/js/about.js"></script>
   </body>
 </html>
